<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/background_dark"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:contentDescription="@string/ingredient_check_image_descryption"
            android:src="@drawable/baseline_check_circle_outline_black_36" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/ingredinets"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title" />
    </LinearLayout>

    <ListView
        android:id="@+id/widget_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_light"/>

    <TextView
        android:id="@+id/widget_empty_layout_tv"
        android:text="@string/empty_widget_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:background="@color/background_light"
        android:visibility="gone" />

</LinearLayout>